Add firebase snippet for Flutter web

--- a/web/index.html
+++ b/web/index.html
@@ -28,6 +28,14 @@
       });
     }
   </script>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="/__/firebase/7.14.4/firebase-app.js"></script>
+
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+      https://firebase.google.com/docs/web/setup#available-libraries -->
+
+  <!-- Initialize Firebase -->
+  <script src="/__/firebase/init.js"></script>  
   <script src="main.dart.js" type="application/javascript"></script>
 </body>
 </html>
